--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="javascript.js" defer></script>
-    <style rel="stylesheet" href="style.css"></style>
+    <link rel="stylesheet" href="style.css"></style>
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div id="display">123456789999</div>
+    <div id="container">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>0</button>
+        <button>+</button>
+        <button>-</button>
+        <button>C</button>
+        <button>*</button>
+        <button>/</button>
+        <button>=</button>
+    </div>
 </body>
 </html>
